--- a/biblioteca/src/main/resources/application.properties
+++ b/biblioteca/src/main/resources/application.properties
@@ -4,14 +4,48 @@
 #server.session.timeout			= 5
 #spring.jackson.time-zone		= America/Sao_Paulo
 
+spring.banner.location=classpath:banner.txt
+
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto			= none
+spring.jpa.hibernate.ddl-auto			= update
 spring.jpa.hibernate.show-sql			= true
-spring.datasource.url					= jdbc:postgresql://localhost:5432/apibiblioteca
+spring.datasource.url					= jdbc:postgresql://localhost:5432/ecommerceg2
 spring.datasource.username				= postgres
 spring.datasource.password				= 123456
-logging.level.org.hibernate.SQL								= INFO
+logging.level.org.hibernate.SQL			= INFO
 
 #logging.level.org.hibernate.SQL								= DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder	= INFO
 #logging.level.org.hibernate.type							= INFO
+
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=18a52c32845e63
+spring.mail.password=39b699dfb4cec4
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.enable=false
+
+api-title = API ecommerce
+api-version = 0.0.1
+api-description = API ecommerce
+api-license = Apache 2.0
+api-tag = Recursos
+api-url = http://localhost/
+api-external-description = API ecommerce
+api-external-url = http://localhost/
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+app.jwt.secret=asdfSFS34wfsdfsdfSDSD32dfsddDDerQSNCK34SOWEK5354fdgdf4
+app.jwt.expiration.ms=86400000
+
+#Logs de seguranca
+org.springframework.security=debug
+org.springframework.web=debug
+#logging.level.root=DEBUG 
+logging.level.org.springframework.web=DEBUG 
+logging.level.org.springframework.security=DEBUG 
+logging.level.org.springframework.security.saml=DEBUG
